--- a/app.css
+++ b/app.css
@@ -1,14 +1,14 @@
 
 g:hover circle{
   fill:blue;
-  transition-duration: 0.5s;
-  stroke:blue;
+
+  stroke:red;
 
 }
 
 g:hover text{
   visibility: visible;
-  transition-duration: 0.5s;
+
 }
 
 g:hover .sous{
@@ -16,6 +16,19 @@ g:hover .sous{
   fill-opacity:0.5;
 }
 
+g:hover rect{
+  visibility: visible;
+}
+
+.home{
+  stroke:red;
+  fill:blue;
+}
+
+g:hover #image886{
+  visibility: visible;
+  transition-duration: 0.5s;
+}
 
 
 circle{
@@ -23,14 +36,7 @@ circle{
   opacity:1;
   fill:transparent;
   fill-opacity:0.3;
-  stroke-width:0.5;
-  /*stroke:#000000;
-  stroke-linecap:round;
-  stroke-linejoin:miter;
-  stroke-miterlimit:4;
-  stroke-dasharray:none;
-  stroke-dashoffset:0;
-  stroke-opacity:1;*/
+  stroke-width:0.2;
 
 }
 
@@ -38,6 +44,18 @@ text{
   visibility: hidden;
   font-family: fantasy;
   stroke:blue;
+  fill:blue;
+  stroke-width:0.3;
+  fill-opacity:0.5;
+}
+
+rect{
+  visibility: hidden;
+  stroke:red;
   fill:white;
   stroke-width:0.3;
+}
+
+#image886{
+    visibility: hidden;
 }
