--- a/app.css
+++ b/app.css
@@ -1,3 +1,73 @@
+/* Initialisation */
+
+body{
+  margin: 0;
+  padding: 0;
+  font-family: "Open Sans", 'Roboto',Helvetica, sans-serif;
+}
+
+
+/*    Header    */
+nav{
+  margin: 0;
+  padding: 0;
+  background-color: #369AAF;
+}
+nav H2{
+  color: #FFFFFF;
+  margin-top: 0px;
+  margin-left: 20px;
+  margin-bottom: 5px;
+  font-size: 2em;
+}
+nav ul{
+  background-color: #369AAF;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+nav li{
+  display: inline-block;
+  width: 200px;
+  height: 40px;
+  margin: 0;
+  padding-left: 10px;
+  border-right: 1px solid #34C7B8;
+  text-align: left;
+  line-height: 40px;
+}
+
+nav li:hover{
+  background-color: #34C7B8;
+}
+
+nav a{
+  display: block;
+  width: auto;
+  height: auto;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+
+
+
+
+
+/*    Zonnig    */
+.mapsvg{
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+  vertical-align: middle;
+
+}
+
+svg{
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 g:hover circle{
   fill:blue;
@@ -61,6 +131,25 @@ rect{
     visibility: hidden;
 }
 
-a{
-  position: absolute;
+
+@media screen and (max-width: 600px){
+  nav li{
+    width: 20%;
+  }
+  .mapsvg{
+    margin-top: 0;
+    padding: 0;
+    height: auto;
+  }
+
+  svg{
+    margin-top: 0;
+    padding: 0;
+    height: auto;
+
+  }
+  }
+
 }
+
+
